--- a/src/components/CalendarComponentStyle.css
+++ b/src/components/CalendarComponentStyle.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
+
 * {
-    font-family: 'Raleway', 'Nirmala UI', 'Roboto', 'Oxygen',
+    font-family: 'Manrope', 'Nirmala UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif !important;
 }
