--- a/src/components/VideoStyle.css
+++ b/src/components/VideoStyle.css
@@ -13,24 +13,24 @@
     object-fit: contain;
 }
 
-.hero .content {
-    text-align: center;
-    position: absolute;
-    margin: auto;
-    width: 100%;
-    height: 100%;
-    display: flex;
-}
+/*.hero .content {*/
+/*    text-align: center;*/
+/*    position: absolute;*/
+/*    margin: auto;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: flex;*/
+/*}*/
 
-.hero .content h1 {
-    font-size: 2.5rem;
-    color: #000;
-    margin-bottom: 2rem;
-}
+/*.hero .content h1 {*/
+/*    font-size: 2.5rem;*/
+/*    color: #000;*/
+/*    margin-bottom: 2rem;*/
+/*}*/
 
-.hero .btn {
-    margin: 1rem .2rem;
-}
+/*.hero .btn {*/
+/*    margin: 1rem .2rem;*/
+/*}*/
 
 /*@media screen and (max-width: 640px) {*/
 /*    .content h1 {*/
