--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope&display=swap');
 
 
 * {
@@ -13,7 +13,7 @@ h1, h4, p, a {
 
 body {
     margin: 0;
-    font-family: 'Raleway', 'Nirmala UI', 'Roboto', 'Oxygen',
+    font-family: 'Manrope', 'Nirmala UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -41,11 +41,11 @@ code {
     sans-serif;
     padding: 12px 32px;
     font-size: 1.1em;
-    background: rgba(255, 255, 255);
-    color: #000;
+    background: #716AFA;
+    color: #fff;
     border: 1px;
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 10px;
 }
 
 
