--- a/src/components/LoginComponentStyle.css
+++ b/src/components/LoginComponentStyle.css
@@ -117,8 +117,18 @@ u {
     margin-bottom: 2rem;
 }
 
-@media screen and (max-width: 640px) {
-    .login-form {
+@media screen and (max-width: 1100px) and (max-height: 1000px) {
 
+    #login-image {
+        width: 100% !important;
+    }
+    .content {
+        width: 100%;
+        height: 90%;
+    }
+
+    .left-image {
+        width: 100%;
+        height: 90%;
     }
 }
