--- a/src/components/LoginComponentStyle.css
+++ b/src/components/LoginComponentStyle.css
@@ -29,7 +29,7 @@ label {
     width: 55%;
     background-color: rgba(255, 255, 255, .4);
     backdrop-filter: blur(10px);
-    border-radius: 10px;
+    border-radius: 25px;
 }
 
 .blur h1 {
@@ -78,6 +78,7 @@ label {
     margin-bottom: .7rem;
     max-width: 600px;
     font-size: 1rem;
+    font-weight: bolder;
 }
 
 .forgot {
@@ -113,7 +114,7 @@ u {
 
 .login-logo {
     max-width: 50px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 @media screen and (max-width: 1100px) and (max-height: 1000px) {
