navbar style and responsiveness

--- a/src/components/NavbarStyle.css
+++ b/src/components/NavbarStyle.css
@@ -1,12 +1,66 @@
 .header {
     position: fixed;
-    width: 99.9%;
-    height: 100px;
+    width: 100%;
+    height: 60px;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
     z-index: 10;
+    background-color: #fff;
+}
+
+.left-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right-navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.right-navbar li {
+    padding: 0.2rem 1.3rem;
+    list-style-type: none;
+    border-radius: 4px;
+}
+
+.logout-button {
+    border: 2px solid #6069FA;
+}
+
+.logout-button a {
+    color: #6069FA;
+    font-weight: bold;
+    font-size: 0.8rem;
+}
+
+.logout-button:hover {
+    transition: .2s;
+    background-color: #6069FA;
+}
+
+.logout-button a:hover{
+    transition: .2s;
+    color: #fff;
+}
+
+.help-button {
+    margin-right: 1rem;
+}
+
+.help-button a {
+    color: dimgrey;
+    font-size: 0.9rem;
+}
+
+.help-button a:hover {
+    transition: .3s;
+    font-size: 1.1rem;
+    color: #6069FA;
 }
 
 .header-bg {
@@ -15,8 +69,8 @@
 }
 
 .nav-logo {
-    max-width: 150px;
-    margin-bottom: 1rem;
+    max-width: 35px;
+    margin-right: 2.5rem;
 }
 
 .nav-menu {
@@ -27,14 +81,17 @@
     padding: 0 1rem;
 }
 
-.nav-menu li:hover {
-    border-bottom: 2px solid #8F867E;
-
+.nav-menu a:hover {
+    transition: .3s;
+    font-size: 1.1rem;
+    color: #6069FA;
+    /*font-weight: bold;*/
 }
 
 .nav-menu a {
-    font-size: 1.2rem;
-    font-weight: 500;
+    font-size: 1rem;
+    font-weight: 200;
+    color: dimgrey;
 }
 
 .hamburger {
@@ -48,6 +105,11 @@
 @media screen and (max-width: 1240px) {
     .hamburger {
         display: block;
+    }
+
+
+    .right-navbar {
+        display: none;
     }
 
     .nav-menu {
@@ -95,6 +157,7 @@
     .burger {
         display: none;
     }
+
 }
 
 
@@ -104,7 +167,7 @@
 }
 
 .dropdown .dropbtn {
-    font-size: 1.2rem;
+    font-size: 1rem;
     border: none;
     outline: none;
     background-color: inherit;
