--- a/src/components/HomeComponentStyle.css
+++ b/src/components/HomeComponentStyle.css
@@ -1,10 +1,10 @@
-#video {
-    position: fixed;
-    width: 100%;
+#home-image {
+    width: 100% !important;
     height: 100%;
-    object-fit: cover;
     z-index: -1;
-    filter: brightness(.9);
+    object-fit: cover;
+    position: fixed;
+    filter: brightness(85%);
 }
 
 .container {
@@ -14,11 +14,34 @@
 }
 
 .container .content {
-    background: rgba(255, 255, 255, .6);
+    background: #fff;
     text-align: center;
-    position: absolute;
-    width: 100%;
+    /*position: absolute;*/
+    /*width: 40%;*/
+    /*height: 100%;*/
+    backdrop-filter: blur(2px);
+    /*display: flex;*/
+
+    width: 40%;
+    float: left;
     height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container .img-front {
+    background: rgba(255, 255, 255, .4);
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*display: flex;*/
+    width: 60%;
+    float: right;
+
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .welcome {
@@ -39,7 +62,7 @@
 }
 
 .home-img {
-    max-width: 450px;
+    max-width: 100px;
     margin-bottom: 1rem;
 }
 
