--- a/src/components/HomeComponentStyle.css
+++ b/src/components/HomeComponentStyle.css
@@ -14,45 +14,40 @@
 }
 
 .container .content {
-    background: #fff;
+    background: rgba(255, 255, 255, .6);
     text-align: center;
-    /*position: absolute;*/
-    /*width: 40%;*/
-    /*height: 100%;*/
     backdrop-filter: blur(2px);
-    /*display: flex;*/
-
-    width: 40%;
-    float: left;
+    width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.container .img-front {
-    background: rgba(255, 255, 255, .4);
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*display: flex;*/
-    width: 60%;
-    float: right;
-
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .welcome {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 55%;
+    margin-right: 20rem;
 }
 
-.container .content h1 {
+.welcome-logo {
+    float: left;
+}
+
+.welcome-msg {
+    text-align: left;
+    width: 80%;
+    height: 100%;
+    float: right;
+}
+
+.welcome-msg h1 {
     font-size: 4rem;
-    color: #000;
+    color: #fff;
+    font-weight: 800;
 }
 
 .container p {
@@ -62,8 +57,9 @@
 }
 
 .home-img {
-    max-width: 100px;
-    margin-bottom: 1rem;
+    max-width: 7rem;
+    margin-right: 2rem;
+    /*float: left;*/
 }
 
 /*@media screen and (max-width: 640px) {*/
