--- a/src/components/VideoStyle.css
+++ b/src/components/VideoStyle.css
@@ -4,7 +4,7 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
-    filter: brightness(.8);
+    filter: brightness(.8) blur(3px) grayscale(70%);
 }
 
 .hero {
