--- a/src/components/HomeComponentStyle.css
+++ b/src/components/HomeComponentStyle.css
@@ -4,7 +4,7 @@
     z-index: -1;
     object-fit: cover;
     position: fixed;
-    filter: brightness(85%);
+    /*filter: brightness(85%);*/
 }
 
 .container {
@@ -14,9 +14,9 @@
 }
 
 .container .content {
-    background: rgba(255, 255, 255, .6);
+    background: rgba(255, 255, 255, .1);
     text-align: center;
-    backdrop-filter: blur(2px);
+    backdrop-filter: blur(4px);
     width: 100%;
     height: 100%;
     display: flex;
@@ -62,13 +62,18 @@
     /*float: left;*/
 }
 
-/*@media screen and (max-width: 640px) {*/
-/*    .content h1 {*/
-/*        font-size: 3rem;*/
-/*    }*/
+@media screen and (max-width: 1240px) {
+    .content h1 {
+        transition: .2s;
+        font-size: 3.3rem;
+    }
 
-/*    .content p {*/
-/*        font-size: 1.4rem;*/
-/*        margin-bottom: 1.6rem;*/
-/*    }*/
-/*}*/
+    .home-img {
+        transition: .2s;
+        max-width: 5rem;
+    }
+
+    .welcome {
+        margin-right: 0;
+    }
+}
