--- a/src/components/BudgetManagerStyle.css
+++ b/src/components/BudgetManagerStyle.css
@@ -222,31 +222,27 @@
     max-width: 900px;
     margin-right: auto;
     margin-left: auto;
-    /*padding-right: 5px;*/
-    /*padding-left: 5px;*/
-
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    display: flex;
+    flex-direction: row;
+    /*grid-gap: 1rem;*/
+    /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
 
 }
 
-.general-add {
+.general-add1 {
     margin-bottom: 3rem;
     align-items: center;
     text-align: center;
-
+    width: 50%;
+    margin-right: 0.5rem;
 }
 
-.left-chart, .right-chart {
-    border: 1px solid #f0f0f0;
-    border-radius: 20px;
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    white-space: pre-wrap;
+.general-add2 {
+    margin-bottom: 3rem;
     align-items: center;
+    text-align: center;
+    width: 50%;
+    margin-left: 0.5rem;
 }
 
 .this-month-add {
@@ -277,6 +273,10 @@
     .general {
         margin-left: 10rem;
         margin-right: 10rem;
+    }
+
+    .third {
+        flex-direction: column;
     }
 }
 
