--- a/src/components/BudgetManagerStyle.css
+++ b/src/components/BudgetManagerStyle.css
@@ -112,20 +112,25 @@
     white-space: pre-wrap;
 }
 
-.save {
-    background-color: grey;
-    color: white;
-    font-size: 2rem;
-    border: none;
-    border-radius: 50%;
-    padding: 1px 12px 1px 12px;
-    float: right;
+
+.save-btn {
+    font-family: 'Manrope', 'Nirmala UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    padding: 10px 27px;
+    font-size: 1rem;
+    font-weight: bolder;
+    background: #6069FA;
+    color: #fff;
+    border: 1px;
+    cursor: pointer;
+    border-radius: 10px;
 }
 
-.save:hover {
-    background: rgba(255, 255, 255, .6);
-    color: #000;
-    cursor: pointer;
+
+.save-btn:hover {
+    transition: .2s;
+    background: rgba(95, 105, 250, .5);
 }
 
 .delete-icon {
@@ -176,16 +181,32 @@
     text-align: left;
 }
 
+.row label {
+    font-size: 1rem;
+    font-weight: bolder;
+    text-align: left;
+    width: 100%;
+    justify-content: left;
+}
+
+.row .lab {
+    text-align: left;
+}
+
 .form-control {
-    /*max-width: 300px;*/
-    font-size: 1.2rem;
-    font-family: 'Indie Flower', serif !important;
-    background-color: #fff;
-    border: none;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    padding: 0.6rem 1rem;
+    font-size: 1rem;
+    font-family: 'Raleway', 'Nirmala UI', serif;
+    background-color: #f0f0f0;
+    border: 2px solid #6069FA;
     outline: none;
-    border-radius: 25px;
+    border-radius: 10px;
     color: #000;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .form-control:focus{
@@ -200,18 +221,20 @@
     border-radius: 20px;
     margin: auto;
     font-size: 1.2rem;
-    font-family: 'Raleway', 'Nirmala UI', serif;
+    font-family: 'Manrope', 'Nirmala UI', serif;
     border: none;
     outline: none;
     color: #000;
 }
 
+.row {
+    /*display: flex;*/
+    /*flex-direction: column;*/
+}
+
 .chart-cont {
     max-width: 1000px;
     margin: auto;
-    /*padding-right: 5px;*/
-    /*padding-left: 5px;*/
-
     display: grid;
     grid-gap: 1rem;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -224,9 +247,6 @@
     margin-left: auto;
     display: flex;
     flex-direction: row;
-    /*grid-gap: 1rem;*/
-    /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
-
 }
 
 .general-add1 {
@@ -254,8 +274,6 @@
     flex-direction: row;
     justify-content: space-between;
     font-size: 1.1rem;
-    /*margin-top: 1.5rem;*/
-
 }
 
 
@@ -277,6 +295,15 @@
 
     .third {
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 900px;
+        margin-left: 10rem;
+        margin-right: 10rem;
+    }
+
+    .general-add1, .general-add2 {
+        width: 100%;
     }
 }
 
