--- a/src/components/DailyComponentStyle.css
+++ b/src/components/DailyComponentStyle.css
@@ -1,43 +1,88 @@
 #daily-image {
     width: 100% !important;
+    top: 5px;
     height: 100%;
     z-index: -1;
     object-fit: cover;
     position: fixed;
-    filter: brightness(85%);
+    filter: brightness(75%) blur(2px) grayscale(10%);
 }
 
 .daily-container {
-    height: 70vh;
+    height: 60vh;
     width: 100%;
     position: relative;
     object-fit: contain;
 }
 
+
 .daily-container .daily-content {
-    background: rgba(255, 255, 255, .6);
+    background: rgba(255, 255, 255, .2);
     text-align: center;
     position: absolute;
     width: 100%;
     height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .daily-title {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin-top: 2rem;
+    /*margin-right: 20rem;*/
 }
 
-.daily-container .daily-content h1 {
-    font-size: 4rem;
-    color: #000;
+.daily-logo {
+    float: left;
 }
 
-.daily-container p {
-    font-size: 1.6rem;
-    font-weight: 200;
-    color: #000;
+.daily-msg {
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    float: right;
 }
+
+.daily-msg h1 {
+    font-size: 3.5rem;
+    color: #fff;
+    font-weight: 800;
+}
+
+.daily-img {
+    max-width: 7rem;
+    margin-right: 2rem;
+    /*float: left;*/
+}
+/*.daily-container .daily-content {*/
+/*    background: rgba(255, 255, 255, .2);*/
+/*    text-align: center;*/
+/*    position: absolute;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
+/*.daily-title {*/
+/*    position: absolute;*/
+/*    top: 50%; left: 50%;*/
+/*    transform: translate(-50%,-50%);*/
+/*}*/
+
+/*.daily-container .daily-content h1 {*/
+/*    font-size: 4rem;*/
+/*    color: #000;*/
+/*}*/
+
+/*.daily-container p {*/
+/*    font-size: 1.6rem;*/
+/*    font-weight: 200;*/
+/*    color: #000;*/
+/*}*/
 
 @media screen and (max-width: 640px) {
     .daily-content h1 {
