--- a/src/components/TakeNotesStyle.css
+++ b/src/components/TakeNotesStyle.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 .out {
-    background: rgba(255, 255, 255, .8);
+    background: #fff;
 }
 
 .tn-container {
