--- a/src/components/TodoComponentStyle.css
+++ b/src/components/TodoComponentStyle.css
@@ -1,23 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 .out {
-    background: rgba(255, 255, 255, .8);
+    background: #fff;
 }
 
 .outer-container {
-    /*width: 100%;*/
-    /*display: grid;*/
-    /*grid-gap: 1rem;*/
-    /*!*grid-template-columns: repeat(2, 1fr);*!*/
-    /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));*/
-    /*height: 100%;*/
-
-    /*margin-right: auto;*/
-    /*margin-left: auto;*/
-    /*padding-right: 15px;*/
-    /*padding-left: 15px;*/
-    margin: auto;
-    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 950px;
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
@@ -25,16 +15,8 @@
 
 
 .left-content, .right-content {
-    /*text-align: center;*/
-    /*margin: auto;*/
-    /*max-width: 800px;*/
-    /*background-color: rgba(255, 255, 255, .6);*/
-    /*border-radius: 20px;*/
-    background-color: rgba(255, 255, 255, .7);
+    /*border: 2px solid #f0f0f0;*/
     border-radius: 20px;
-    padding: 4rem 4rem;
-    min-height: 550px;
-    min-width: 448px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -42,8 +24,27 @@
     margin: auto;
 }
 
+.to-do-cont {
+    border-radius: 20px;
+    border: 2px solid #f0f0f0;
+    display: flex;
 
+    /*padding: 3rem 3rem;*/
+    min-height: 440px;
+    min-width: 450px;
+}
 .todo {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    text-align: center;
+    align-items: center;
+    margin: auto;
+    width: 70%;
+    /*background-color: pink ;*/
+}
+
+.cal {
     display: flex;
     flex-direction: column;
     justify-content: start;
@@ -51,6 +52,12 @@
     text-align: center;
     margin: auto;
     border-radius: 20px;
+    border: 2px solid #f0f0f0;
+
+
+    padding: 2rem 2rem;
+    min-height: 440px;
+    min-width: 450px;
 }
 
 h1 {
@@ -64,35 +71,62 @@ h1 {
 }
 
 .todo-input {
-    max-width: 300px;
-    margin-bottom: 2rem;
-    margin-right: 1rem;
-    padding: 0.4rem 1rem;
-    font-size: 1.3rem;
-    font-family: 'Indie Flower', serif !important;
-    background-color: #fff;
-    border: none;
+    /*max-width: 300px;*/
+    /*margin-bottom: 2rem;*/
+    /*margin-right: 1rem;*/
+    /*padding: 0.4rem 1rem;*/
+    /*font-size: 1.3rem;*/
+    /*font-family: 'Indie Flower', serif !important;*/
+    /*background-color: #fff;*/
+    /*border: none;*/
+    /*outline: none;*/
+    /*border-radius: 25px;*/
+    /*color: #000;*/
+
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
+    padding: 0.6rem 1rem;
+    font-size: 1rem;
+    font-family: 'Raleway', 'Nirmala UI', serif;
+    background-color: #f0f0f0;
+    border: 2px solid #6069FA;
     outline: none;
-    border-radius: 25px;
+    border-radius: 10px;
     color: #000;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
 
 .todo-button {
-    font-family: 'Raleway', 'Nirmala UI', 'Roboto', 'Oxygen',
+    /*font-family: 'Raleway', 'Nirmala UI', 'Roboto', 'Oxygen',*/
+    /*'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
+    /*sans-serif;*/
+    /*padding: 3px 12px;*/
+    /*font-size: 1.5em;*/
+    /*background: #8F867E;*/
+    /*color: #fff;*/
+    /*border: 1px;*/
+    /*cursor: pointer;*/
+    /*border-radius: 50%;*/
+    font-family: 'Manrope', 'Nirmala UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    padding: 3px 12px;
-    font-size: 1.5em;
-    background: #8F867E;
+    padding: 10px 27px;
+    font-size: 1rem;
+    font-weight: bolder;
+    background: #6069FA;
     color: #fff;
     border: 1px;
     cursor: pointer;
-    border-radius: 50%;
+    border-radius: 10px;
+    margin-bottom: 2rem;
 }
 
 .todo-row{
-    font-family: 'Indie Flower', serif !important;
-    font-size: 1.3em;
+    font-family: 'Manrope', serif !important;
+    font-size: 1rem;
+    color: dimgray;
 }
 
 .todo-container {
@@ -102,26 +136,49 @@ h1 {
 }
 
 .todo-button:hover {
-    background: rgba(255, 255, 255, .6);
-    color: #000;
+    transition: .2s;
+    background: rgba(95, 105, 250, .5);
 }
 
 .todo-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 4px auto;
+    margin: 5px auto;
     padding: 2px;
     border-radius: 5px;
     width: 100%;
 }
 
 .iconsContainer {
+    margin-right: 2rem;
     display: flex;
     align-items: center;
     font-size: 20px;
     cursor: pointer;
 }
+
+.iconsContainer:hover {
+    transition: .2s;
+    color: #6069FA;
+}
+
+.todo-item {
+    width: 50%;
+    text-align: left;
+}
+
+.check-box {
+    margin-left: 2rem;
+    cursor: pointer;
+    width: 15px;
+    height: 15px;
+}
+
+input.check-box:checked {
+    /*background-color: pink !important;*/
+}
+
 
 @media screen and (max-width: 1140px) {
     .out .outer-container {
