--- a/src/components/NotesComponentStyle.css
+++ b/src/components/NotesComponentStyle.css
@@ -4,54 +4,73 @@
     z-index: -1;
     object-fit: cover;
     position: fixed;
-    filter: brightness(85%);
+    filter: brightness(0.8) blur(4px) grayscale(30%);
+    /*bottom: 220px;*/
+    top: 30px;
 }
 
 .notes-container {
-    height: 70vh;
+    height: 60vh;
     width: 100%;
     position: relative;
     object-fit: contain;
 }
 
 .notes-container .notes-content {
-    background: rgba(255, 255, 255, .6);
+    background: rgba(255, 255, 255, .2);
     text-align: center;
     position: absolute;
     width: 100%;
     height: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .notes-title {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%,-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    margin-top: 2rem;
+    /*margin-right: 20rem;*/
 }
 
-.notes-container .notes-content h1 {
-    font-size: 4rem;
-    color: #000;
+.notes-logo {
+    float: left;
 }
 
-.notes-container p {
-    font-size: 1.6rem;
-    font-weight: 200;
-    color: #000;
+.notes-msg {
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    float: right;
+}
+
+.notes-msg h1 {
+    font-size: 3.5rem;
+    color: #fff;
+    font-weight: 800;
 }
 
 .notes-img {
-    max-width: 450px;
-    margin-bottom: 1rem;
+    max-width: 7rem;
+    margin-right: 2rem;
+    /*float: left;*/
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 1240px) {
     .notes-content h1 {
-        font-size: 3rem;
+        transition: .2s;
+        font-size: 2.5rem;
     }
 
-    .notes-content p {
-        font-size: 1.4rem;
-        margin-bottom: 1.6rem;
+    .notes-img {
+        transition: .2s;
+        max-width: 5rem;
     }
+
 }
 
