--- a/src/components/TakeNotesStyle.css
+++ b/src/components/TakeNotesStyle.css
@@ -13,7 +13,7 @@
 }
 
 .note {
-    background-color: #fff;
+    background-color: rgba(95, 105, 250, .1);
     border-radius: 10px;
     padding: 1rem;
     min-height: 320px;
@@ -27,7 +27,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
 
+.note-footer small {
+    color: #6069FA;
 }
 
 .notes-list {
@@ -37,22 +40,22 @@
 }
 
 .note.new {
-    background-color: rgba(255, 255, 255, .6) ;
+    background-color: rgba(95, 105, 250, .1);
 }
 
 .txt-area {
     border: none;
     resize: none;
     background-color: rgba(255, 255, 255, .8) ;
-    font-family: 'Indie Flower', serif !important;
+    font-family: 'Manrope', serif !important;
     margin-bottom: 0.2rem;
     padding: 0.4rem 0.8rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .saved-txt {
-    font-family: 'Indie Flower', serif !important;
-    font-size: 1.3rem;
+    font-family: 'Manrope', serif !important;
+    font-size: 1rem;
 }
 
 .txt-area:focus{
@@ -60,20 +63,26 @@
 }
 
 .save {
-    background-color: #8F867E;
+    background-color: #6069FA;
     color: white;
-    font-size: 2rem;
+    font-size: 1.5rem;
     border: none;
     border-radius: 50%;
-    padding: 1px 12px 1px 12px;
+    padding: 1px 10px 1px 10px;
 }
 
 .save:hover {
-    background: rgba(255, 255, 255, .6);
-    color: #000;
+    transition: .2s;
+    background: rgba(95, 105, 250, .5);
     cursor: pointer;
 }
 
 .delete-icon {
+    color: #6069FA;
     cursor: pointer;
+}
+
+.delete-icon:hover {
+    transition: .2s;
+    color: rgba(95, 105, 250, .5);
 }
