--- a/src/components/FAQStyle.css
+++ b/src/components/FAQStyle.css
@@ -1,15 +1,17 @@
 .faqs {
     width: 100%;
     padding: 6rem 0;
-    background: rgba(255, 255, 255, .8);
+    background: #fff;
 }
 
 .wrapper {
-    width: 670px;
+    border: 1px solid #f0f0f0;
+    max-width: 670px;
     margin: auto;
     background-color: rgba(255, 255, 255, .5);
     padding: 30px 80px 80px;
     border-radius: 20px;
+
 }
 
 .header-faq {
@@ -18,6 +20,11 @@
 
 .header-faq p {
     font-size: 1.6rem;
+    color: #6069FA;
+}
+
+.header-faq h1 {
+    color: dimgray;
 }
 
 .item {
@@ -25,6 +32,7 @@
     margin-bottom: 10px;
     padding: 10px 20px;
     border-radius: 10px;
+    border: 1px solid #f0f0f0;
 }
 
 .item:hover {
@@ -41,11 +49,12 @@
 .title h2 {
     font-weight: lighter;
     font-size: 1.2rem;
+    color: dimgray;
 }
 
 .title span {
     font-size: 1rem;
-    color: #8F867E;
+    color: #6069FA;
 }
 
 .contnt {
@@ -60,19 +69,24 @@
     height: auto;
     max-height: 9999px;
     transition: all 0.4s cubic-bezier(1,0,1,0);
+    color: dimgray;
 }
 
 ol {
     white-space: pre-wrap;
     list-style-type: none;
     padding: 15px;
+    color: dimgray;
 }
 
 .lnk {
     text-decoration: underline;
     font-weight: bold;
+    color: #6069FA;
 }
 
 .plus {
     font-size: 1rem;
 }
+
+
