--- a/src/components/HelpComponentStyle.css
+++ b/src/components/HelpComponentStyle.css
@@ -3,72 +3,119 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    bottom: 70px;
     z-index: -1;
-    filter: brightness(.9);
+    filter: brightness(0.9) blur(4px) grayscale(30%);
 }
 
 .help-container {
-    height: 70vh;
+    height: 60vh;
     width: 100%;
     position: relative;
     object-fit: contain;
 }
 
+
 .help-container .help-content {
-    background: rgba(255, 255, 255, .6);
+    background: rgba(255, 255, 255, .2);
     text-align: center;
     position: absolute;
     width: 100%;
     height: 100%;
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 
 .help-title {
-    position: absolute;
-    top: 50%; left: 50%;
-    transform: translate(-50%,-50%);
+    /*background-color: #8F867E;*/
+    margin-right: 10rem;
+    display: flex;
+    justify-content: center;
+    /*align-items: center;*/
+    width: 50%;
+    margin-top: 2rem;
+    /*margin-right: 20rem;*/
 }
 
-.help-container .help-content h1 {
-    font-size: 4rem;
-    color: #000;
+.help-logo {
+    float: left;
 }
 
-.help-container p {
-    font-size: 1.6rem;
-    font-weight: 200;
-    color: #000;
+.help-msg {
+    text-align: left;
+    width: 100%;
+    height: 100%;
+    float: right;
+}
+
+.help-msg h1 {
+    font-size: 3.5rem;
+    color: #fff;
+    font-weight: 800;
+}
+
+.help-msg p {
+    font-size: 1.3rem;
+    color: #fff;
+    font-weight: 800;
+    text-align: left;
 }
 
 .help-img {
-    max-width: 450px;
-    margin-bottom: 1rem;
+    max-width: 5rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    /*float: left;*/
 }
 
 .btn-help {
+    margin-top: 1.5rem;
     font-family: 'Raleway', 'Nirmala UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     padding: 12px 32px;
-    font-size: 1.2em;
-    background: rgba(255, 255, 255, .7);
-    color: #000;
+    font-size: 1.1em;
+    font-weight: bolder;
+    background: rgba(255, 255, 255, .4);
+    color: #fff;
     border: 1px;
     cursor: pointer;
-    border-radius: 30px;
+    border-radius: 10px;
 }
 
 .btn-help:hover {
-    background: rgba(255, 255, 255, .5);
+    transition: .2s;
+    background: rgba(95, 105, 250, .5);
 }
 
-@media screen and (max-width: 640px) {
+@media screen and (max-width: 1240px) {
     .help-content h1 {
-        font-size: 3rem;
+        transition: .2s;
+        font-size: 2.5rem;
     }
 
-    .help--content p {
-        font-size: 1.4rem;
-        margin-bottom: 1.6rem;
+    .help-img {
+        transition: .2s;
+        max-width: 3.5rem;
+    }
+
+    .btn-help {
+        transition: .2s;
+        font-size: 1rem;
+        padding: 10px 30px;
+    }
+
+    .header-faq p {
+        font-size: 1.2rem !important;
+        transition: .2s;
+    }
+
+    .header-faq h1 {
+        color: dimgray;
+        font-size: 1.9rem;
+        transition: .2s;
     }
 }
-
