--- a/src/components/AboutInfoComponentStyle.css
+++ b/src/components/AboutInfoComponentStyle.css
@@ -1,5 +1,5 @@
 .about {
-    background: rgba(255, 255, 255, .8);
+    background: #fff;
     width: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
