--- a/src/components/AboutInfoComponentStyle.css
+++ b/src/components/AboutInfoComponentStyle.css
@@ -1,55 +1,49 @@
 .about {
     background: #fff;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    display: flex;
+    flex-direction: column;
     height: 100%;
+    padding-top: 150px;
+    padding-bottom: 100px;
+
 }
 
-.about .left {
-    text-align: center;
-    margin: auto;
-    padding: 3rem 4rem;
-    max-width: 600px;
+.about .left-about  {
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 2rem;
 }
 
-.about .left p {
-    margin: 1.2rem 0;
+.about .right-about {
+    width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.question-logo {
+    width: 50px;
+    margin-right: 1rem;
+}
+
+.about p {
+    margin: 1rem 0;
     font-size: 1.1rem;
+    color: dimgray;
+    text-align: justify;
 }
 
-.about .right {
-    width: 100%;
-    margin: auto;
-}
-
-.right .img-container {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    position: relative;
-    align-items: center;
-    text-align: center;
-}
-
-.img-logo {
-    max-width: 50%;
-}
-
-.right .top {
-    grid-column: 1 / span 15;
-    grid-row: 1;
-    padding: 4rem 4rem;
-    z-index: 6;
+.about h1 {
+    color: dimgray;
+    font-weight: bolder;
 }
 
 
-@media screen and (max-width: 1140px) {
-    .about {
-        grid-template-columns: 1fr;
-    }
-
-    .about .img {
-        max-width: 80%;
+@media screen and (max-width: 850px) {
+    .right-about, .left-about {
+        width: 500px !important;
+        transition: 0.2s;
     }
 
 }
