--- a/src/components/TodoComponentStyle.css
+++ b/src/components/TodoComponentStyle.css
@@ -11,6 +11,7 @@
     display: grid;
     grid-gap: 2rem;
     grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+    transition: .2s;
 }
 
 
@@ -172,6 +173,7 @@ input.check-box:checked {
 
 @media screen and (max-width: 1140px) {
     .out .outer-container {
+        transition: .2s;
         grid-template-columns: 1fr;
     }
 
