--- a/src/components/FAQStyle.css
+++ b/src/components/FAQStyle.css
@@ -61,6 +61,7 @@
     max-height: 0;
     overflow: hidden;
     transition: all 0.4s cubic-bezier(0,1,0,1);
+    color: dimgray;
 }
 
 .contnt.show {
@@ -90,4 +91,27 @@ ol {
     font-size: 1rem;
 }
 
+.faqs-btn {
+    font-family: 'Manrope', 'Nirmala UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+    padding: 4px 12px;
+    font-size: 0.9rem;
+    font-weight: bolder;
+    background: #6069FA;
+    color: #fff;
+    border: 1px;
+    border-radius: 7px;
+    transition: .2s;
+    text-align: center;
+}
+
+.faqs-plus {
+    background-color: #6069FA;
+    color: white;
+    font-size: 1rem;
+    border: none;
+    border-radius: 60%;
+    padding: 1px 7px 1px 7px;
+}
 
